.metadata/.plugins/org.eclipse.cdt.ui/test0.build.log
16:14:57 **** Rebuild of configuration Debug for project test0 ****
Info: Internal Builder is used for build
g++ "-IC:\\Users\\Asif\\Desktop\\ICS 46\\Workspace\\courselib\\src" -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\stltest.o" "..\\src\\stltest.cpp" 
..\src\stltest.cpp: In function 'int main()':
..\src\stltest.cpp:20:8: error: 'ics' has not been declared
   for (ics::pair<int,std::string> elem : m)
        ^
..\src\stltest.cpp:20:18: error: expected primary-expression before 'int'
   for (ics::pair<int,std::string> elem : m)
                  ^
..\src\stltest.cpp:20:18: error: expected ';' before 'int'
..\src\stltest.cpp:24:3: error: expected primary-expression before 'for'
   for (auto elem : m)
   ^
..\src\stltest.cpp:24:3: error: expected ')' before 'for'

16:14:57 Build Finished (took 343ms)

